footer and info completed

--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
         </section>
 
         <section class="company-strategy">
+            <div class="timeline">
+                <div class="circle-orange"><span>Extraction</span></div>
+                <div style="width: 1193px;" class="line"></div>
+            </div>
             <div class="container">
-                <div class="strategy-timeline"></div>
                 <div class="box">
                     <div class="box-info">
                         <h2>How We Do It</h2>
@@ -176,11 +179,10 @@
             <div class="container">
                 <div class="box">
                     <div class="box-info">
-                        <img width="200" src="images/Sign+type.png" alt="">
+                        <img width="200" src="images/Sign+type.png" alt="syoak-logo">
                         <p>We have a long and proud history givin emphasis to environment social and economic outcomes to deliver places that respond</p>
-                        <a href=""><img src="images/Shape.png" alt="">1182 Williams Avenue, NEW YORK</a>
-                        <br>
-                        <a href=""><img src="images/Path.png" alt="">hello@syoak.com</a>
+                        <a href="#"><img src="images/Shape.png" style="padding-right: 10px;" alt="location-icon">1182 Williams Avenue, NEW YORK</a>
+                        <a href="#"><img src="images/Path.png" style="padding-right: 10px;" alt="arrow-icon">hello@syoak.com</a>
                     </div>
                     <div class="box-info">
                         <div class="columns">
@@ -226,7 +228,7 @@
 
         <aside>
             <div class="logo-container">
-                <img width="90" src="images/Sign+type.png" alt="logo">
+                <img width="90" src="images/Sign+type.png" alt="syoak-logo">
             </div>
             <div class="arrow-container">
                 <img height="100" src="images/Arrow-aside.png" alt="arrow">
