contact section completed

--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
                 </div>
             </div>
         </section>
-        <section class="company-contact-us">
+
+        <section class="company-contact">
             <div class="container">
-                <h2 style="width:500px;">Get in Touch With Us</h2>
+                <h2>Get in Touch With Us</h2>
                 <div class="box">
                     <div class="box-info">
                         <label for="name">Name</label>
@@ -160,21 +161,21 @@
                         <br>
                         <label for="message">Message</label>
                         <br>
-                        <textarea placeholder="Write something here..." name="message" id="message" cols="50" rows="10"></textarea>
+                        <textarea placeholder="Write something here..." name="message" id="message" cols="40" rows="10"></textarea>
                         <br>
                         <label for="verification">Verification</label>
                         <br>
                         <input class="checkbox" type="checkbox" name="verification" id="verification">
                         <label for="verification">I am not a robot</label>
-                        <br>
                         <button>Send Message</button>
                     </div>
                     <div class="box-img">
-                        <img src="images/google_map.png" alt="">
+                        <img width="100%" src="images/google_map.png" alt="">
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="company-info">
             <div class="container">
                 <div class="box">
@@ -212,6 +213,7 @@
                 </div>
             </div>
         </section>
+
         <footer>
             <div class="container">
                 <div>
