achievements section complete

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </section>
-        <section class="company-projects">
+        <section class="company-achievements">
             <div class="container">
                 <h2>Our Achivements</h2>
                 <p>SYOAK industry consists of companies that own and operate extensive networks of pipeline assets to connect producers of oil, natural gas and natural gas liquids from the prolific North American resources to key markets. We also distribute natural gas to a growing base of industrial and residential customers through transmission pipelines.</p>
