--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         <main>
 
             <nav>
-                <ul class="nav-ul">
+                <img width="48" height="48" id="burger-icon" class="burger-menu-icon" src="images/menu.png" alt="burger-menu-icon">
+                <ul id="dropdown-menu" class="nav-ul menu">
                     <li><a href="">Services</a></li>
                     <li><a href="">Projects</a></li>
                     <li><a href="">About us</a></li>
                     <li><a href="">Blog</a></li>
                 </ul>
-                <ul class="login-ul">
+                <ul class="login-ul menu">
                     <li><a href=""><img src="images/login-icon.png" alt="log-in-icon">Log in</a></li>
                     <li><a href=""><img src="images/contactus-icon.png" alt="contact-us-icon">Contact us</a></li>
                     <button class="signup-btn">Sign up</button>
@@ -82,12 +83,12 @@
             </div>
         </section>
 
-        <section class="company-strategy">
-            <div class="timeline">
-                <div class="circle-orange"><span>Extraction</span></div>
-                <div style="width: 1193px;" class="line"></div>
-            </div>
-            <div class="container">
+        <section style="background-color: #fff;" class="company-strategy">
+            <div class="container strategy-container">
+                <div class="timeline">
+                    <div class="circle-orange"><span>Extraction</span></div>
+                    <div class="line"></div>
+                </div>
                 <div class="box">
                     <div class="box-info">
                         <h2>How We Do It</h2>
@@ -100,7 +101,59 @@
                     </div>
                 </div>
             </div>
+            <div class="container strategy-container">
+                <div class="timeline">
+                    <div class="circle-orange"><span>Transport</span></div>
+                    <div class="line"></div>
+                </div>
+                <div class="box">
+                    <div class="box-info">
+                        <h2>Mode of Transport</h2>
+                        <h3>Syoak is uniquely positioned to deliver actionable intelligence to analyze and reduce risk</h3>
+                        <p>We have a long and proud history givin emphasis to environment social and economic outcomes to deliver places that respond.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        </p>
+                    </div>
+                    <div class="box-img">
+                        <img src="images/transport.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="timeline">
+                    <div class="circle-orange"><span>Refining</span></div>
+                    <div class="line"></div>
+                </div>
+                <div class="box">
+                    <div class="box-info">
+                        <h2>We Make it More Efficient</h2>
+                        <h3>Syoak is uniquely positioned to deliver actionable intelligence to analyze and reduce risk</h3>
+                        <p>We have a long and proud history givin emphasis to environment social and economic outcomes to deliver places that respond.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        </p>
+                    </div>
+                    <div class="box-img">
+                        <img src="images/efficient.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="timeline">
+                    <div class="circle-orange"><span>Export</span></div>
+                    <div class="line"></div>
+                </div>
+                <div class="box">
+                    <div class="box-info">
+                        <h2>Where Does it Go</h2>
+                        <h3>Syoak is uniquely positioned to deliver actionable intelligence to analyze and reduce risk</h3>
+                        <p>We have a long and proud history givin emphasis to environment social and economic outcomes to deliver places that respond.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        </p>
+                    </div>
+                    <div class="box-img">
+                        <img src="images/export.png" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
+
         <section class="company-achievements">
             <div class="container">
                 <h2>Our Achivements</h2>
@@ -230,12 +283,14 @@
 
         <aside>
             <div class="logo-container">
-                <img width="90" src="images/Sign+type.png" alt="syoak-logo">
+                <img class="aside-logo" width="90" src="images/Sign+type.png" alt="syoak-logo">
             </div>
             <div class="arrow-container">
                 <img height="100" src="images/Arrow-aside.png" alt="arrow">
             </div>
         </aside>
     </div>
+
+<script src="app.js"></script>
 </body>
 </html>
