about section complete

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                         </div>
                         <div class="box-img">
                             <img src="images/Group1.png" alt="">
+                            <div class="img-text-box">
+                                <img style="margin: 20px;" width="12" height="12" src="images/x.png" alt="">
+                                <p>Syoak is uniquely positioned to deliver actionable intelligence to analyze and reduce risk</p>
+                            </div>
                         </div>
                     </div>
                     <div class="box-2 box">
