side scrolling container updated

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
         <section style="background-color: #fff;" class="company-strategy">
             <div class="container strategy-container">
                 <div class="timeline">
+                    <img src="images/arrow-left.png" alt="">
                     <div class="circle-orange"><span>Extraction</span></div>
+                    <img src="images/arrow-right.png" alt="">
                     <div class="line"></div>
                 </div>
                 <div class="box">
@@ -122,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container strategy-container">
                 <div class="timeline">
                     <div class="circle-orange"><span>Refining</span></div>
                     <div class="line"></div>
@@ -139,7 +141,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container strategy-container">
                 <div class="timeline">
                     <div class="circle-orange"><span>Export</span></div>
                     <div class="line"></div>
