image pop ups finished

--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
                     </div>
                     <div class="box-img">
                         <img src="images/Frame1.png" alt="">
+                        <div class="strategy-img-text-box text-box-1">
+                            <img src="images/orange-icon.png" alt="">
+                            <p>Syoak serves more than 2,500 petrol stations globally</p>
+                        </div>
+                        <div class="strategy-img-text-box text-box-2">
+                            <img src="images/orange-icon.png" alt="">
+                            <p>Syoak serves more than 2,500 petrol stations globally</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -121,6 +129,14 @@
                     </div>
                     <div class="box-img">
                         <img src="images/transport.png" alt="">
+                        <div class="strategy-img-text-box text-box-1 text-box-1-small">
+                            <img src="images/orange-icon.png" alt="">
+                            <p>Syoak serves more than 2,500 petrol stations globally</p>
+                        </div>
+                        <div class="strategy-img-text-box text-box-2 text-box-2-small">
+                            <img src="images/orange-icon.png" alt="">
+                            <p>Syoak serves more than 2,500 petrol stations globally</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -138,6 +154,14 @@
                     </div>
                     <div class="box-img">
                         <img src="images/efficient.png" alt="">
+                        <div class="strategy-img-text-box text-box-1 text-box-1-small">
+                            <img src="images/orange-icon.png" alt="">
+                            <p>Syoak serves more than 2,500 petrol stations globally</p>
+                        </div>
+                        <div class="strategy-img-text-box text-box-2 text-box-2-small">
+                            <img src="images/orange-icon.png" alt="">
+                            <p>Syoak serves more than 2,500 petrol stations globally</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -155,6 +179,14 @@
                     </div>
                     <div class="box-img">
                         <img src="images/export.png" alt="">
+                        <div class="strategy-img-text-box text-box-1 text-box-1-small">
+                            <img src="images/orange-icon.png" alt="">
+                            <p>Syoak serves more than 2,500 petrol stations globally</p>
+                        </div>
+                        <div class="strategy-img-text-box text-box-2 text-box-2-small">
+                            <img src="images/orange-icon.png" alt="">
+                            <p>Syoak serves more than 2,500 petrol stations globally</p>
+                        </div>
                     </div>
                 </div>
             </div>
