image alts updated

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa ullam aut quidem maxime sit, nam cumque dolorum eligendi veritatis sed.">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com" as="style">
-    <link rel="preconnect" href="https://fonts.gstatic.com" as="style">
+    <link rel="preconnect" href="https://fonts.gstatic.com" as="font">
+    <link rel="preconnect" href="https://fonts.gstatic.com" as="font">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&display=swap" rel="stylesheet">
     <title>SYOAK</title>
 </head>
@@ -15,16 +16,16 @@
         <main>
 
             <nav>
-                <img width="48" height="48" id="burger-icon" class="burger-menu-icon" src="images/menu.png" alt="burger-menu-icon">
+                <img width="48" height="48" id="burger-icon" class="burger-menu-icon" src="images/menu.png" alt="burger menu icon">
                 <ul id="dropdown-menu" class="nav-ul menu">
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Projects</a></li>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Blog</a></li>
                 </ul>
                 <ul class="login-ul menu">
-                    <li><a href=""><img src="images/login-icon.png" alt="log-in-icon">Log in</a></li>
-                    <li><a href=""><img src="images/contactus-icon.png" alt="contact-us-icon">Contact us</a></li>
+                    <li><a href="#"><img src="images/login-icon.png" alt="log in icon">Log in</a></li>
+                    <li><a href="#"><img src="images/contactus-icon.png" alt="contact us icon">Contact us</a></li>
                     <button class="signup-btn">Sign up</button>
                 </ul>
             </nav>
@@ -33,7 +34,7 @@
                 <div class="container">
                     <h1>Our business takes the industry of oil & gas to a new level.</h1>
                     <p>We have a long and proud history giving emphasis to environment social and economic outcomes to deliver places that respond.</p>
-                    <button class="btn"><img src="images/Arrow.png" alt="arrow-icon">Learn more</button>
+                    <button class="btn"><img src="images/Arrow.png" alt="arrow icon">Learn more</button>
                 </div>
             </section>
 
@@ -58,16 +59,16 @@
                         <p>We have a long and proud history givin emphasis to environment social and economic outcomes to deliver places that respond.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <div class="box-img">
-                            <img src="images/Group1.png" alt="">
+                            <img src="images/Group1.png" alt="image">
                             <div class="img-text-box">
-                                <img style="margin: 20px;" width="12" height="12" src="images/x.png" alt="">
+                                <img style="margin: 20px;" width="12" height="12" src="images/x.png" alt="exit icon">
                                 <p>Syoak is uniquely positioned to deliver actionable intelligence to analyze and reduce risk</p>
                             </div>
                         </div>
                     </div>
                     <div class="box-2 box">
                         <div class="box-img">
-                            <img src="images/Group2.png" alt="">
+                            <img src="images/Group2.png" alt="image">
                         </div>
                         <div class="box-info">
                             <h3>Our business takes the industry of oil and gass to a new level.</h3>
@@ -80,7 +81,7 @@
                             <p>We have a long and proud history givin emphasis to environment social and economic outcomes to deliver places that respond.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <div class="box-img">
-                            <img src="images/Group3.png" alt="">
+                            <img src="images/Group3.png" alt="image">
                         </div>
                     </div>
                 </div>
@@ -90,9 +91,9 @@
         <section style="background-color: #fff;" class="company-strategy">
             <div class="container strategy-container">
                 <div class="timeline">
-                    <img src="images/arrow-left.png" alt="">
+                    <img src="images/arrow-left.png" alt="arrow left">
                     <div class="circle-orange"><span>Extraction</span></div>
-                    <img src="images/arrow-right.png" alt="">
+                    <img src="images/arrow-right.png" alt="arrow right">
                     <div class="line"></div>
                 </div>
                 <div class="box">
@@ -103,13 +104,13 @@
                         </p>
                     </div>
                     <div class="box-img">
-                        <img src="images/Frame1.png" alt="">
+                        <img src="images/Frame1.png" alt="image">
                         <div class="strategy-img-text-box text-box-1">
-                            <img src="images/orange-icon.png" alt="">
+                            <img src="images/orange-icon.png" alt="orange icon">
                             <p>Syoak serves more than 2,500 petrol stations globally</p>
                         </div>
                         <div class="strategy-img-text-box text-box-2">
-                            <img src="images/orange-icon.png" alt="">
+                            <img src="images/orange-icon.png" alt="orange icon">
                             <p>Syoak serves more than 2,500 petrol stations globally</p>
                         </div>
                     </div>
@@ -128,13 +129,13 @@
                         </p>
                     </div>
                     <div class="box-img">
-                        <img src="images/transport.png" alt="">
+                        <img src="images/transport.png" alt="transport image">
                         <div class="strategy-img-text-box text-box-1 text-box-1-small">
-                            <img src="images/orange-icon.png" alt="">
+                            <img src="images/orange-icon.png" alt="orange icon">
                             <p>Syoak serves more than 2,500 petrol stations globally</p>
                         </div>
                         <div class="strategy-img-text-box text-box-2 text-box-2-small">
-                            <img src="images/orange-icon.png" alt="">
+                            <img src="images/orange-icon.png" alt="orange icon">
                             <p>Syoak serves more than 2,500 petrol stations globally</p>
                         </div>
                     </div>
@@ -153,13 +154,13 @@
                         </p>
                     </div>
                     <div class="box-img">
-                        <img src="images/efficient.png" alt="">
+                        <img src="images/efficient.png" alt="image">
                         <div class="strategy-img-text-box text-box-1 text-box-1-small">
-                            <img src="images/orange-icon.png" alt="">
+                            <img src="images/orange-icon.png" alt="orange icon">
                             <p>Syoak serves more than 2,500 petrol stations globally</p>
                         </div>
                         <div class="strategy-img-text-box text-box-2 text-box-2-small">
-                            <img src="images/orange-icon.png" alt="">
+                            <img src="images/orange-icon.png" alt="orange icon">
                             <p>Syoak serves more than 2,500 petrol stations globally</p>
                         </div>
                     </div>
@@ -178,13 +179,13 @@
                         </p>
                     </div>
                     <div class="box-img">
-                        <img src="images/export.png" alt="">
+                        <img src="images/export.png" alt="image">
                         <div class="strategy-img-text-box text-box-1 text-box-1-small">
-                            <img src="images/orange-icon.png" alt="">
+                            <img src="images/orange-icon.png" alt="orange icon">
                             <p>Syoak serves more than 2,500 petrol stations globally</p>
                         </div>
                         <div class="strategy-img-text-box text-box-2 text-box-2-small">
-                            <img src="images/orange-icon.png" alt="">
+                            <img src="images/orange-icon.png" alt="orange icon">
                             <p>Syoak serves more than 2,500 petrol stations globally</p>
                         </div>
                     </div>
@@ -200,7 +201,7 @@
                     <div class="box-sm">
                         <div class="box-sm-info">
                             <div class="box-sm-img-container">
-                                <img src="images/box-sm-img-1.png" alt="">
+                                <img src="images/box-sm-img-1.png" alt="icon">
                             </div>
                             <h3>2562</h3>
                             <p>Square Meters Built</p>
@@ -209,7 +210,7 @@
                     <div class="box-sm">
                         <div class="box-sm-info">
                             <div class="box-sm-img-container">
-                                <img src="images/box-sm-img-2.png" alt="">
+                                <img src="images/box-sm-img-2.png" alt="icon">
                             </div>
                             <h3>184</h3>
                             <p>Completed Projects.</p>
@@ -218,7 +219,7 @@
                     <div class="box-sm">
                         <div class="box-sm-info">
                             <div class="box-sm-img-container">
-                                <img src="images/engineers.png" alt="">
+                                <img src="images/engineers.png" alt="icon">
                             </div>
                             <h3>351</h3>
                             <p>Work With Us</p>
@@ -227,7 +228,7 @@
                     <div class="box-sm">
                         <div class="box-sm-info">
                             <div class="box-sm-img-container">
-                                <img src="images/box-sm-img-4.png" alt="">
+                                <img src="images/box-sm-img-4.png" alt="icon">
                             </div>
                             <h3>65</h3>
                             <p>Ideas Realized</p>
@@ -261,7 +262,7 @@
                         <button>Send Message</button>
                     </div>
                     <div class="box-img">
-                        <img width="100%" src="images/google_map.png" alt="">
+                        <img width="100%" src="images/google_map.png" alt="google map">
                     </div>
                 </div>
             </div>
@@ -273,8 +274,8 @@
                     <div class="box-info">
                         <img width="200" src="images/Sign+type.png" alt="syoak-logo">
                         <p>We have a long and proud history givin emphasis to environment social and economic outcomes to deliver places that respond</p>
-                        <a href="#"><img src="images/Shape.png" style="padding-right: 10px;" alt="location-icon">1182 Williams Avenue, NEW YORK</a>
-                        <a href="#"><img src="images/Path.png" style="padding-right: 10px;" alt="arrow-icon">hello@syoak.com</a>
+                        <a href="#"><img src="images/Shape.png" style="padding-right: 10px;" alt="location icon">1182 Williams Avenue, NEW YORK</a>
+                        <a href="#"><img src="images/Path.png" style="padding-right: 10px;" alt="arrow icon">hello@syoak.com</a>
                     </div>
                     <div class="box-info">
                         <div class="columns">
@@ -321,7 +322,7 @@
 
         <aside>
             <div class="logo-container">
-                <img class="aside-logo" width="90" src="images/Sign+type.png" alt="syoak-logo">
+                <img class="aside-logo" width="90" src="images/Sign+type.png" alt="syoak logo">
             </div>
             <div class="arrow-container">
                 <img height="100" src="images/Arrow-aside.png" alt="arrow">
@@ -329,6 +330,6 @@
         </aside>
     </div>
 
-<script src="app.js"></script>
+<script src="app.js" async></script>
 </body>
 </html>
