--- a/homepage.html
+++ b/homepage.html
@@ -9,9 +9,27 @@
     <title>SYOAK | Homepage</title>
 </head>
 <body>
-    <nav></nav>
-    <header></header>
-    <main></main>
-    <aside></aside>
+
+    <nav>
+        <section class="logo"></section>
+        <section class="navbar"></section>
+    </nav>
+
+    <header>
+        <section class="search"></section>
+        <section class="profile"></section>
+    </header>
+
+    <main>
+        <section class="featured"></section>
+        <section class="statistics"></section>
+        <section class="activity"></section>
+    </main>
+
+    <aside>
+        <section class="sales-report"></section>
+        <section class="messages"></section>
+        
+    </aside>
 </body>
 </html>
