logo section updated

--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,9 @@
 <body>
 
     <nav>
-        <section class="logo"></section>
+        <section class="logo">
+            <img src="images/syoak-icon-small.png" alt="syoak icon">
+        </section>
         <section class="navbar"></section>
     </nav>
 
@@ -29,7 +31,7 @@
     <aside>
         <section class="sales-report"></section>
         <section class="messages"></section>
-        
+
     </aside>
 </body>
 </html>
