navbar section finished

--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,12 @@
         <section class="logo">
             <img src="images/syoak-icon-small.png" alt="syoak icon">
         </section>
-        <section class="navbar"></section>
+        <section class="navbar">
+            <a href="#"><img class="active" src="images/nav-icon-1.png" alt="navbar icon"></a>
+            <a href="#"><img src="images/search-icon.png" alt="search icon"></a>
+            <a href="#"><img src="images/stats-icon.png" alt="statistics icon"></a>
+            <a href="#"><img src="images/user-icon.png" alt="user icon"></a>
+        </section>
     </nav>
 
     <header>
