header section finished

--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa ullam aut quidem maxime sit, nam cumque dolorum eligendi veritatis sed.">
     <link rel="stylesheet" href="homepage.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>SYOAK | Homepage</title>
 </head>
 <body>
@@ -23,8 +25,14 @@
     </nav>
 
     <header>
-        <section class="search"></section>
-        <section class="profile"></section>
+        <section class="search">
+            <label for="search"><img src="images/Search.png" alt=""></label>
+            <input type="text" name="search" id="search" placeholder="Search">
+        </section>
+        <section class="profile">
+            <img src="images/Notifications.png" alt="notifications icon">
+            <img src="images/Avatar.png" alt="user image">
+        </section>
     </header>
 
     <main>
