featured section update

--- a/homepage.html
+++ b/homepage.html
@@ -35,16 +35,57 @@
         </section>
     </header>
 
+<div class="main-aside-container">
     <main>
-        <section class="featured"></section>
-        <section class="statistics"></section>
-        <section class="activity"></section>
+
+        <section class="featured">
+            <div class="container container-blue">
+                <div class="wrapper">
+                    <h1>Diesel Fuel</h1>
+                    <h2>$1.96</h2>
+                    <p>AVG PRICE</p>
+                </div>
+                <img style="padding: 0;" src="images/line-stats.png" alt="line stats">
+                <hr>
+                <div class="months-container">
+                    <span>JAN</span>
+                    <span>FEB</span>
+                    <span>MAR</span>
+                    <span>APR</span>
+                    <span>MAY</span>
+                    <span>JUN</span>
+                    <span>JUL</span>
+                </div>
+            </div>
+            <div style="width: 200px;" class="container">
+                <div class="wrapper"></div>
+            </div>
+            <div style="width: 200px;" class="container">
+                <div class="wrapper"></div>
+            </div>
+            <div style="width: 200px;" class="container">
+                <div class="wrapper"></div>
+            </div>
+        </section>
+
+        <section class="statistics">
+            <div class="container"></div>
+        </section>
+        <section class="activity">
+            <div class="container"></div>
+            <div class="container"></div>
+        </section>
     </main>
 
     <aside>
-        <section class="sales-report"></section>
-        <section class="messages"></section>
-
+        <section class="sales-report">
+            <div class="container"></div>
+        </section>
+        <section class="messages">
+            <div class="container"></div>
+        </section>
     </aside>
+</div>
+
 </body>
 </html>
